# garmin-training-tool

./: .gitignore  README.md  pyproject.toml  session.json.example
examples/: 5k_plan.yaml  interval_session.yaml  simple_week.yaml
garmin_training_builder/: __init__.py  __main__.py  cli.py  client.py  plan_parser.py
garmin_training_builder/presets/: __init__.py  hansons-half-beginner.yaml  higdon-half-novice1.yaml  pfitz-half-12-47.yaml
garmin_training_tool/: __init__.py  __main__.py  cli.py  plan_parser.py  workout_builder.py
garmin_training_tool/presets/: hansons-half-beginner.yaml  higdon-half-intermediate1.yaml  higdon-half-intermediate2.yaml  higdon-half-novice2.yaml  higdon-marathon-novice1.yaml  pfitz-half-12-47.yaml
