[project]
name = "garmin-training-builder"
version = "1.0.0"
description = "Create and schedule structured running workouts on Garmin Connect from a simple YAML plan"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.scripts]
garmin-training-builder = "garmin_training_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
