[project]
name = "garmin-training-tool"
version = "1.0.0"
description = "Create and schedule structured running workouts on Garmin Connect from a simple YAML plan"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.scripts]
garmin-training-tool = "garmin_training_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["garmin_training_tool"]

[tool.hatch.build.targets.wheel.force-include]
"garmin_training_tool/presets" = "garmin_training_tool/presets"

[tool.uv]
package = true
